@@ -14,7 +14,8 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+// import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -28,30 +29,35 @@ import java.util.List;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final JwtAuthFilter jwtAuthFilter;
+    // private final JwtAuthFilter jwtAuthFilter;
 
-    // Usamos un valor por defecto si la variable no está configurada
-    @Value("${app.cors.allowed-origins:https://lash-studio-hykj.vercel.app}")
-    private String allowedOrigin;
+    // 👉 Ahora puedes definir VARIOS dominios separados por coma
+    @Value("${app.cors.allowed-origins}")
+    private String allowedOrigins;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
             .csrf(csrf -> csrf.disable())
-            // 1. Aplicar CORS primero
+            
+            // ✅ CORS
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            
             .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            
             .authorizeHttpRequests(auth -> auth
-                // 2. Permitir explícitamente el "Preflight" (OPTIONS)
+                // ✅ Permitir preflight (IMPORTANTE)
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                // 3. Rutas públicas
+
+                // ✅ Rutas públicas
                 .requestMatchers("/", "/api/auth/**", "/api/clientes/register").permitAll()
                 .requestMatchers(HttpMethod.GET, "/api/servicios/**").permitAll()
-                // 4. Cualquier otra ruta (puedes ajustarlo después a .authenticated())
+
+                // 🔒 Cambia a .authenticated() cuando ya uses JWT
                 .anyRequest().permitAll()
             );
 
-        // Si vas a usar JWT, descomenta esta línea después de verificar que el GET funciona
+        // 🔐 Activa esto cuando uses JWT
         // http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -59,21 +65,27 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+
         CorsConfiguration config = new CorsConfiguration();
-        
-        // Configuramos el origen de Vercel explícitamente
-        config.setAllowedOrigins(List.of(
-            "https://lash-studio-hykj.vercel.app",
-            "http://localhost:5173" // Para que sigas pudiendo probar en local
+
+        // 🔥 Convertimos string → lista (separado por comas)
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        config.setAllowedOrigins(origins);
+
+        config.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS"
         ));
-        
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With"));
+
+        config.setAllowedHeaders(Arrays.asList(
+                "Authorization", "Content-Type", "Accept"
+        ));
+
         config.setAllowCredentials(true);
-        config.setMaxAge(3600L); // Cache de CORS por 1 hora
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
+
         return source;
     }
 
